Thu Jan 21 17:34:01 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* marshal.c (r_object0): honor Marshal.load post proc
	  value for TYPE_LINK.  by Hiroshi Nakamura <nahi@ruby-lang.org>
	  https://github.com/ruby/ruby/pull/1204 fix GH-1204

Thu Jan 21 16:37:50 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (update-rubyspec): fix r53208 like r53451.

Wed Jan 20 20:58:25 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk, Makefile.in: update-config_files is only for Unix
	  platforms.

Wed Jan 20 17:13:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/extlibs.rb: add --cache option to change cache directory.

Tue Jan 19 17:03:40 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Added Unicode data file CaseFolding.txt to be additionally
	  downloaded (with Kimihito Matsui)

Tue Jan 19 10:09:58 2016  Sho Hashimoto  <sho-h@ruby-lang.org>

	* lib/shell.rb (Shell.debug_output_exclusive_unlock): remove
	  because Mutex#exclusive_unlock was already deleted. [fix GH-1185]

Tue Jan 19 09:38:27 2016  Nick Cox  <nick@nickcox.me>

	* vm_method.c: fix grammar in respond_to? warning.
	  [fix GH-1047]

Mon Jan 18 14:37:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): an escaped newline is not an
	  actual newline, and the rest part should not be dedented.
	  [ruby-core:72855] [Bug #11989]

Mon Jan 18 12:04:34 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/ruby/test_string.rb: Added extra testcase for test_rstrip_bang
	  and test_lstrip_bang. [fix GH-1178] Patch by @Matrixbirds

Mon Jan 18 11:47:27 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* string.c: fix a typo. [fix GH-1202][ci skip] Patch by @sunboshan

Sun Jan 17 21:15:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: improve ICC (Intel C Compiler) support.

	* configure.in (CXX): The name of icc's c++ compiler is `icpc`.

	* configure.in (warnings): Add `-diag-disable=2259` to suppress